# lecture-18

./: pyproject.toml
mysite/: settings.py  urls.py
polls/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py  0002_alter_question_author.py
polls/static/polls/: style.css
polls/templates/polls/: base.html  detail.html  index.html  question.html  question_edit.html  results.html
polls/templates/registration/: login.html  sign_up.html
